--- a/ShoppingCart/appsettings.json
+++ b/ShoppingCart/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db_conn": "Server=ServerName;Database=Prototype1;Integrated Security=True"
+    "db_conn": "Server=;Database=Prototype1;Integrated Security=True"
   }
 }
