reverted appsettings back to original

--- a/ShoppingCart/appsettings.json
+++ b/ShoppingCart/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db_conn": "Server=localhost;Database=Prototype1;Integrated Security=True"
+    "db_conn": "Server=localhost;Database=ShoppingCart; Integrated Security=true"
   }
 }
